# PenguinGame

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  Dimension.cpp  Dimension.h  EntityController.cpp  EntityController.h  EventsManager.cpp  EventsManager.h  GameEngine.cpp  GameEngine.h  Map.cpp  Map.h  MapParser.cpp  MapParser.h  PenguinGame.cpp  PenguinGame.h  TXTParser.cpp  TXTParser.h  World.cpp  World.h  dimension.cpp  dimension.h  entity.cpp  entity.h  entityController.cpp  entityController.h  eventHandler.cpp  eventHandler.h  main.cpp  map.cpp  map.h  penguinGame.cpp  penguinGame.h  player.cpp  player.h  position.cpp  position.h  res_path.h  world.cpp  world.h
src/components/: CameraOffset.cpp  CameraOffset.h  CanCollect.cpp  CanCollect.h  CanOpen.cpp  CanOpen.h  CollideAble.cpp  CollideAble.h  CollisionDamage.cpp  CollisionDamage.h  Component.cpp  Component.h  EndsGame.cpp  EndsGame.h  EvadeCapability.cpp  EvadeCapability.h  Gravity.cpp  Gravity.h  Health.cpp  Health.h  Inventory.cpp  Inventory.h  MapName.cpp  MapName.h  Momentum.cpp  Momentum.h  MoveAbleComponent.cpp  MoveAbleComponent.h  Ownership.cpp  Ownership.h  Path.cpp  Path.h  Position.cpp  Position.h  SpatialComponent.cpp  SpatialComponent.h  TeleportTarget.cpp  TeleportTarget.h  TimeToLive.cpp  TimeToLive.h  (+12 more)
src/entities/: Ak47.cpp  Ak47.h  Disc.cpp  Disc.h  Door.cpp  Door.h  DoubleJumpEnabler.cpp  DoubleJumpEnabler.h  Entity.cpp  Entity.h  HealthIndicator.cpp  HealthIndicator.h  HealthItem.cpp  HealthItem.h  Key.cpp  Key.h  Ladder.cpp  Ladder.h  LadderBegin.cpp  LadderBegin.h  LadderEnd.cpp  LadderEnd.h  MapChanger.cpp  MapChanger.h  MovementReset.cpp  MovementReset.h  Npc.cpp  Npc.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  SavePoint.cpp  SavePoint.h  Shield.cpp  Shield.h  TeleporterEntrance.cpp  TeleporterEntrance.h  TeleporterTarget.cpp  TeleporterTarget.h  (+4 more)
src/events/: CollisionEvent.cpp  CollisionEvent.h  EntityCanSee.cpp  EntityCanSee.h  EntityDied.cpp  EntityDied.h  EntityMoved.cpp  EntityMoved.h  Event.cpp  Event.h  FallingEvent.cpp  FallingEvent.h  HealthEvent.cpp  HealthEvent.h  KeyDownEvent.cpp  KeyDownEvent.h  KeyPressedEvent.cpp  KeyPressedEvent.h  KeyUpEvent.cpp  KeyUpEvent.h  MapMovement.cpp  MapMovement.h  MoveEntity.cpp  MoveEntity.h  PlayerDies.cpp  PlayerDies.h  TriggerActivated.cpp  TriggerActivated.h
src/managers/: ComponentsManager.cpp  ComponentsManager.h  EntityManager.cpp  EntityManager.h  EventsManager.cpp  EventsManager.h  SystemsManager.cpp  SystemsManager.h
src/menu/: MapRoom.cpp  MapRoom.h  MapViewer.cpp  MapViewer.h  Menu.cpp  Menu.h  MenuComponent.cpp  MenuComponent.h  MenuEvents.cpp  MenuEvents.h
src/res/: CMakeLists.txt  License.txt  map.txt  map2.txt  map3.txt
src/res/maps/: connection.txt
src/res/maps/area1/: boss.txt  downwards.txt  getDisk.txt  map.txt  map2.txt
src/res/maps/area2/: boss.txt  getAK.txt  getShield.txt  map2.txt  start.txt
src/res/maps/area3/: finalBoss.txt  hell.txt  hellEntrance.txt  returner.txt  start.txt
src/systems/: AiSystem.cpp  AiSystem.h  AudioSystem.cpp  AudioSystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  HealthSystem.cpp  HealthSystem.h  InputSystem.cpp  InputSystem.h  InventorySystem.cpp  InventorySystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionSystem.cpp  PositionSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h  TextureSystem.cpp  TextureSystem.h  TriggerSystem.cpp  TriggerSystem.h  XpSystem.cpp  XpSystem.h
